--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,6 +12,8 @@ buildscript {
        classpath 'com.android.tools.build:gradle:3.4.1'
        classpath 'com.google.gms:google-services:3.2.0' 
     classpath 'com.android.tools.build:gradle:8.1.1'
+     classpath 'com.google.firebase:firebase-auth:21.1.0' // Add Firebase Auth
+  classpath 'com.google.android.gms:play-services-auth:20.2.0' // Add Google Sign-In
      }
 
 }
