--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,23 +1,3 @@
-buildscript {
-    ext.kotlin_version = '1.7.10'
-    repositories {
-        google()
-        mavenCentral()
-    }
-
-  dependencies {
-         classpath 'com.android.tools.build:gradle:7.3.0'
-         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-         classpath "com.google.firebase:firebase-bom:33.4.0"
-       classpath 'com.android.tools.build:gradle:3.4.1'
-       classpath 'com.google.gms:google-services:3.2.0' 
-    classpath 'com.android.tools.build:gradle:8.1.1'
-     classpath 'com.google.firebase:firebase-auth:21.1.0' // Add Firebase Auth
-  classpath 'com.google.android.gms:play-services-auth:20.2.0' // Add Google Sign-In
-     }
-
-}
-
 allprojects {
     repositories {
         google()
@@ -25,12 +5,12 @@ allprojects {
     }
 }
 
-rootProject.buildDir = '../build'
+rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
 subprojects {
-    project.evaluationDependsOn(':app')
+    project.evaluationDependsOn(":app")
 }
 
 tasks.register("clean", Delete) {
